# ethereum-vanity-address-generator

./: Cargo.toml
src/: main.rs
src/lib/: crypto_utils.rs  ethereum_keys.rs  initialize_logger.rs
